--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glptraining-skillscans",
+  "name": "glptraining-hub",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
